--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="google-site-verification" content="9AXAGLhC7HPco0ggKSwRYMFdeMJ5Vf5qtcrDCuN9GTQ" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Portfolio Alan Pacheco</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+  <!-- Verificación Google -->
+  <meta name="google-site-verification" content="9AXAGLhC7HPco0ggKSwRYMFdeMJ5Vf5qtcrDCuN9GTQ" />
+
+  <!-- SEO básico -->
+  <title>Portfolio Alan Pacheco</title>
+  <meta name="description"
+    content="Portafolio profesional de Alan Pacheco con proyectos, experiencia y soluciones tecnológicas." />
+
+  <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+  <meta property="og:title" content="Portfolio Alan Pacheco" />
+  <meta property="og:description" content="Explora mis proyectos y experiencia en tecnología y desarrollo." />
+  <meta property="og:url" content="https://thecodesolutions.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://thecodesolutions.com/preview.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Portfolio Alan Pacheco" />
+  <meta name="twitter:description" content="Explora mis proyectos y experiencia en tecnología y desarrollo." />
+  <meta name="twitter:image" content="https://thecodesolutions.com/preview.jpg" />
+
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
