--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <meta property="og:description" content="Explora mis proyectos y experiencia en tecnología y desarrollo." />
   <meta property="og:url" content="https://thecodesolutions.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://thecodesolutions.com//img/About-Image.c38d4a9b.png" />
+  <meta property="og:image" content="https://thecodesolutions.com/About-Image.c38d4a9b.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
